--- a/CIfParserTest/CifParserTest.csproj
+++ b/CIfParserTest/CifParserTest.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FileHelpers" Version="3.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="NSubstitute" Version="4.0.0" />
     <PackageReference Include="Serilog" Version="2.8.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
