Add convenience method to call by file name.  Do not allow the enumerable to be enumerated twice.

--- a/CIfParserTest/CifParserTest.csproj
+++ b/CIfParserTest/CifParserTest.csproj
@@ -22,4 +22,14 @@
     <ProjectReference Include="..\CifParser\CifParser.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Data\toc-update-mon.CIF">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
