Allow parser to handle both DTD and TTIS master station files

--- a/CIfParserTest/CifParserTest.csproj
+++ b/CIfParserTest/CifParserTest.csproj
@@ -33,6 +33,9 @@
     <None Update="Data\ttisf193.msn">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Data\RJTTF293.msn">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
