--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,11 +20,11 @@ jobs:
       updateAssemblyInfo: true
   - script: dotnet restore
     displayName: Nuget restore
-  - script: dotnet build /p:Version='$(GitVersion.AssemblySemVer)'
+  - script: dotnet build /p:Version=$(GitVersion.AssemblySemVer)
     displayName: Build
   - script: dotnet test --no-build
     displayName: Unit Test
-  - script: dotnet pack --no-build -o '$(build.artifactStagingDirectory)'
+  - script: dotnet pack --no-build -o '$(build.artifactStagingDirectory)' p:PackageVersion=$(GitVersion.NuGetVersion)
     displayName: Create Nuget package
 - job: LinuxBuildAndTest
   displayName: 'Linux build and test'
