--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,9 +50,4 @@ jobs:
       packagesToPush: $(Pipeline.Workspace)/**/CifParser*.nupkg
       nuGetFeedType: external
       publishFeedCredentials: NuGet
-  - task: NuGetCommand@2
-    inputs:
-      command: push
-      packagesToPush: $(Pipeline.Workspace)/**/CifParser*.snupkg
-      nuGetFeedType: external
-      publishFeedCredentials: NuGet
+      includeSymbols: true
