--- a/CifParser/CifParser.csproj
+++ b/CifParser/CifParser.csproj
@@ -5,7 +5,7 @@
     <Authors>Phil Sharp</Authors>
     <Description>Processes a UK rail timetable file in the CIF format.  Works with both RDG and Netowrk Rail versions of the file.</Description>
     <PackageProjectUrl>https://github.com/Phils0/CifParser/</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/Phils0/CifParser/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/Phils0/CifParser/</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>ukrail cif</PackageTags>
