--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ jobs:
   steps:
   - download: current
     artifact: CifParserPackage
-  - task: NuGetCommand@2
+  - task: DotNetCoreCLI@2
     inputs:
       command: push
       packagesToPush: $(Pipeline.Workspace)/**/CifParser*.nupkg
