Add Archive Parser

--- a/CIfParserTest/CifParserTest.csproj
+++ b/CIfParserTest/CifParserTest.csproj
@@ -42,6 +42,12 @@
     <None Update="Data\ttis144.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Data\RJTTF293.ZIP">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\RJTTF293.MCA">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
