Correct data file name so case correct for linux build

--- a/CIfParserTest/CifParserTest.csproj
+++ b/CIfParserTest/CifParserTest.csproj
@@ -27,13 +27,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Data\RJTTF293.MCA">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\RJTTF293.MSN">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\RJTTF293.ZIP">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>    
     <None Update="Data\toc-update-mon.CIF">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Data\ttisf193.msn">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Data\RJTTF293.msn">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Data\toc-update-tue.CIF.gz">
@@ -41,11 +44,8 @@
     </None>
     <None Update="Data\ttis144.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Data\RJTTF293.ZIP">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Data\RJTTF293.MCA">
+    </None>    
+    <None Update="Data\ttisf193.msn">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
