Enable nullable references

--- a/CifParser/CifParser.csproj
+++ b/CifParser/CifParser.csproj
@@ -13,6 +13,8 @@
     <Title>UK Rail Timetable CIF parser</Title>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <LangVersion>default</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
