fix need commit history for gitversion

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-  
+        with:
+          fetch-depth: 0
+        
       - name: Setup .NET 6.0
         uses: actions/setup-dotnet@v3
         with:
