--- a/CifParser/CifParser.csproj
+++ b/CifParser/CifParser.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Phil Sharp</Authors>
-    <Description>Processes a UK rail timetable file in the CIF format.  Works with both RDG and Netowrk Rail versions of the file.</Description>
+    <Description>Processes a UK rail timetable file in the CIF format.  Works with both RDG and Network Rail versions of the file.</Description>
     <PackageProjectUrl>https://github.com/Phils0/CifParser/</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/Phils0/CifParser/</RepositoryUrl>
